rust/cube/cubeplanner/tests/snapshots/dialects__oracle_grouped.snap
---
source: cubeplanner/tests/dialects.rs
expression: "grouped(Dialect :: Oracle).sql"
---
SELECT "users".city "users__city", sum("orders".amount) "orders__total_amount" 
FROM  (SELECT * FROM public.orders WHERE 1 = 1 AND 1 = 1
)  "orders"
LEFT JOIN  public.users  "users" ON "orders".user_id = "users".id
WHERE ("orders".status = ?)
GROUP BY "users".city
ORDER BY  2  DESC
FETCH NEXT 10 ROWS ONLY
