rust/cube/cubeplanner/tests/snapshots/dialects__pinot_by_month.snap
---
source: cubeplanner/tests/dialects.rs
expression: "by_month(Dialect :: Pinot).sql"
---
SELECT CAST(dateTrunc('month', CAST(toDateTime("orders".created_at, 'yyyy-MM-dd HH:mm:ss.SSS', 'UTC') as TIMESTAMP)) as TIMESTAMP) "orders__created_at_month", count("orders".id) "orders__count" 
FROM  (SELECT * FROM public.orders WHERE (created_at >= CAST(? as TIMESTAMP) AND created_at <= CAST(? as TIMESTAMP)) AND 1 = 1
)  AS "orders"
WHERE ("orders".created_at >= CAST(? as TIMESTAMP) AND "orders".created_at <= CAST(? as TIMESTAMP))
GROUP BY 1
ORDER BY  1  ASC
